--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "flipdown": "^0.3.2",
     "material-design-icon-fonts": "^3.0.1",
     "material-design-icons": "^3.0.1",
-    "pnotify": "^4.0.1"
+    "pnotify": "^4.0.1",
+    "spin.js": "^4.1.0"
   }
 }
