--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "firebase": "^8.2.7",
     "flipdown": "^0.3.2",
+    "lodash.debounce": "^4.0.8",
     "material-design-icon-fonts": "^3.0.1",
     "material-design-icons": "^3.0.1",
     "pnotify": "^4.0.1",
